@@ -195,7 +195,11 @@ void* log_get_lock(void)
 {
 	if(!key_created)
 		return NULL;
+#ifndef THREADS_DISABLED
 	return (void*)&log_lock;
+#else
+	return NULL;
+#endif
 }
 
 void
